objects/DL_VC__Master_Value_Proposition__c.object
<CustomObject>
    <fields>
        <fullName>DL_VC__Cost_of_Delay__c</fullName>
        <label>Cost of Delay</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Master_Value_Prop_Id__c</fullName>
        <externalId>true</externalId>
        <label>Master Value Proposition Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__NPV__c</fullName>
        <label>NPV</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Master Value Propositions</relationshipLabel>
        <relationshipName>Master_Value_Propositions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DL_VC__Payback__c</fullName>
        <label>Payback</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__ROI__c</fullName>
        <label>ROI</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__TCO__c</fullName>
        <label>TCO</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Total_Benefits__c</fullName>
        <label>Total Benefits</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Total_Costs__c</fullName>
        <label>Total Costs</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Master Value Proposition</label>
    <nameField>
        <label>Master Value Proposition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Value Propositions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>